# This file is part of Edgehog.
#
# Copyright 2023, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-forwarder"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
backoff = { workspace = true, features = ["tokio"] }
displaydoc.workspace = true
edgehog-device-forwarder-proto.workspace = true
edgehog-tls.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
httpmock = { workspace = true, optional = true }
rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["__rustls-tls", "tokio-rustls", "url"] }
tracing = { workspace = true, features = ["log"] }
url.workspace = true

[dependencies.reqwest]
workspace = true
default-features = false
features = [
    "charset",
    "http2",
    "system-proxy",
    "rustls-no-provider",
]

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true

[features]
_test-utils = ["dep:httpmock", "tokio/test-util"]

[[test]]
name = "http-test"
path = "tests/http_test.rs"
required-features = ["_test-utils"]

[[test]]
name = "ws-test"
path = "tests/ws_test.rs"
required-features = ["_test-utils"]
