# This file is part of Edgehog.
#
# Copyright 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-service"
version.workspace = true
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# Enable the local management of containers
containers = ["dep:edgehog-containers"]

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
edgehog-containers = { workspace = true, optional = true }
edgehog-proto.workspace = true
edgehog-store = { workspace = true }
eyre.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Enable mocking for the tests
edgehog-containers = { workspace = true, features = ["__mock"] }
pretty_assertions.workspace = true
toml.workspace = true
mockall.workspace = true
