# This file is part of Edgehog.
#
# Copyright 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-store"
version.workspace = true
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
diesel = { workspace = true, features = ["sqlite", "uuid"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
displaydoc = { workspace = true }
rusqlite = { workspace = true, features = ["modern_sqlite"] }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
containers = []
# Recreates the C bindings at buildtime
bindgen = ["rusqlite/buildtime_bindgen"]
# Uses and compiles the vendored version of the C dependencies
vendored = ["rusqlite/bundled"]
