# This file is part of Edgehog.
#
# Copyright 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehogctl"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
aws-lc-rs.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
edgehog-tls.workspace = true
eyre.workspace = true
hex.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempdir.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dependencies.reqwest]
workspace = true
default-features = false
features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-no-provider",
  "stream",
  "json",
]
