# This file is part of Edgehog.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "hardware-id-service"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
procfs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v5", "v4"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
