# This file is part of Edgehog.
#
# Copyright 2022, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: CC0-1.0

[package]
name = "hardware-id-service"
version = "0.1.0"
edition.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v5", "v4"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs.workspace = true
