# This file is part of Edgehog.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "led-manager-service"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
